--- a/style.css
+++ b/style.css
@@ -1,39 +1,43 @@
 body {
     font-family: Arial, sans-serif; 
     margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+    padding: 0px;
+    background-color: #ffffff;
     color: #333;
     line-height: 1.6;
+    width: 1300;
+    height: 2890;
 
 }
 #logo {
+    align-items: center;
     height: 100%px;
-    width: 100%;
-    margin-left: -15px;
-    margin-bottom: -10px;
+    width: 100%px;
+    margin-bottom: -5px;
+    margin-top: -80px;
 }
-      
 header {
     background-color: #005f73; /*Cor Verde*/
     color: white;
-    padding: 10px 0;
-    border-bottom: 4px solid #94d2bd; /* Linha sutil separando o cabeçalho */
+    width: 100%;
+    padding: 200px 0px;
+    border-bottom: 10px solid #94d2bd; /* Linha sutil separando o cabeçalho */
 }
 .menu {
     text-align: center;
     margin-top: 10px;
+    margin-bottom: -90px;
 }
 
 .menu a {
     text-decoration: none;
     color: white;
     background-color: #94d2bd;
-    padding: 10px 20px;
-    margin: 5px;
-    border-radius: 30px;
+    padding:30px 50px;
+    margin: 30 8 -700 8;
+    border-radius: 80px;
     transition: background-color 0.3s ease-in-out;
-    font-size: 16px;
+    font-size: 50px;
     display: inline-block;
 }
 .menu a:hover {
@@ -49,6 +53,7 @@ footer {
     color: #999;
     text-align: center;
     padding: 1px;
+    font-size: 40px;
 }
 #MyChart{
     margin-left: 10px; 
