--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     background-color: #ffffff;
     color: #333;
     line-height: 1.6;
+    width: 1300px;
+    height: 2890px;
+
 }
 #logo {
     align-items: center;
@@ -17,7 +20,7 @@ header {
     background-color: #005f73; /*Cor Verde*/
     color: white;
     width: 100%;
-    padding: 400px 0px;
+    padding: 200px 0px;
     border-bottom: 10px solid #94d2bd; /* Linha sutil separando o cabeçalho */
 }
 .menu {
