--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
     height: 100%px;
     width: 100%px;
+    margin-left: 100;
     margin-bottom: -5px;
     margin-top: -80px;
 }
