--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ body {
 }
 #logo {
     align-items: center;
-    height: 100%px;
-    width: 100%px;
-    margin-left: 100px;
+    height: 500px;
+    width: 500px;
+    margin-left: 60px;
     margin-bottom: -5px;
     margin-top: -80px;
 }
