--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif; 
+    font-size: 50px;
     margin: 0;
     padding: 0px;
     background-color: #ffffff;
