--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 }
 #logo {
     align-items: center;
-    height: 500px;
-    width: 500px;
+    height: 100%;
+    width: 100%;
     margin-left: 60px;
     margin-bottom: -5px;
     margin-top: -80px;
