--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
 }
 #logo {
     align-items: center;
-    height: 100%;
-    width: 100%;
-    margin-left: 60px;
-    margin-bottom: -5px;
-    margin-top: -80px;
+    height: 100%px;
+    width: 100%px;
+    margin-left: -120px;
+    margin-bottom: -20px;
+    margin-top: -40;
+
 }
 header {
     background-color: #005f73; /*Cor Verde*/
