--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 50px;
     margin: 0;
     padding: 0px;
-    background-color: #red;
+    background-color: #ffffff;
     color: #333;
     line-height: 1.6;
     width: 1300px;
@@ -12,8 +12,8 @@ body {
 }
 #logo {
     align-items: center;
-    height: 50px;
-    width: 100px;
+    height: 247.2px;
+    width: 1450.8px;
     margin-left: -120px;
     margin-bottom: -20px;
     margin-top: -40;
