--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 50px;
     margin: 0;
     padding: 0px;
-    background-color: #ffffff;
+    background-color: #333;
     color: #333;
     line-height: 1.6;
     width: 1300px;
