--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif; 
     margin: 0;
     padding: 0px;
-    background-color: #333;
+    background-color: #fff;
     color: #333;
     line-height: 1.6;
     width: 1300px;
